--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -61,7 +61,7 @@
     padding: 7px 16px;
     border: 1px solid;
     border-radius: 50px;
-    color: rgb(206, 146, 67);
+    color: burlywood;
     font-weight: 600;
     cursor: pointer;
     transition: all 0.2s ease;
@@ -73,16 +73,81 @@
     background-color: rgb(246, 248, 229);
 }
 
-.image1{
-    margin-left: 110px;
-    height:400px;
-    width:auto;
+.image{
+    height:auto;
+    width:50%;
 }
 .chill .text{
     background-color: rgb(236, 214, 184);
 }
 
 .rewards .text{
-    background-color: rgb(228, 220, 209);
+    background-color: #f5d1a2;
+    margin-left:80px
 }
 
+section{
+    display: flex;
+}
+
+.top-bottom-section{
+    width: 50%;
+}
+.section-container{
+    display: flex;
+    flex-direction: column;
+}
+.top-bottom-section .image{
+    width: 100%;
+}
+
+.top-bottom-section .image img{
+    width: 100%;
+}
+
+.top-bottom-section .text{
+    display: flex;
+    flex-direction: column;
+}
+.cta-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.top-bottom-section:first-child .section-container{
+    margin-right: 16px;
+}
+
+.top-bottom-section:last-child .section-container{
+    margin-left: 16px;
+}
+
+.top-bottom-section .text {
+    background-color: rgb(253, 220, 182);
+    padding-left: 24px;
+    padding-bottom: 32px;
+    padding-right: 24px;
+    padding-top: 16px;
+    color: rgb(87, 53, 11);
+}
+
+.top-bottom-section .image{
+    display: flex;
+}
+
+.top-bottom-section .text h1{
+    font-size: 24px;
+    font-weight: 400;
+    padding-bottom: 24px;
+}
+
+.top-bottom-section .text h3{
+    font-size: 19px;
+    line-height: 1.75;
+}
+
+.top-bottom-section {
+    display: flex;
+    margin-bottom: 32px;
+}
