--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,107 +1,124 @@
-body{
-    margin: 0;
-    font-family: Helvetica,Arial, sans-serif;
-    font-weight: 400;
-    color: rgba(0,0,0,.87);
+body {
+  margin: 0;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.87);
 }
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
-a{
-    color:black
+a {
+  color: black;
 }
 
 header {
-    height: 101px;
-    position: relative;
-    box-shadow: 0 1px 3px rgba(0,0,0,.1),0 2px 2px rgba(0,0,0,.06),0 0 2px rgba(0,0,0,.07) ;}
+  height: 101px;
+  position: relative;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.06),
+    0 0 2px rgba(0, 0, 0, 0.07);
+}
 
 .logo {
-    height: 51px;
-    width: 51px;
+  height: 51px;
+  width: 51px;
 }
 
 .header-container {
-    max-width: 1440px;
-    margin: 0 auto;
-    display: flex;
-    height: 100%;
-    justify-content: space-between;
+  max-width: 1440px;
+  margin: 0 auto;
+  display: flex;
+  height: 100%;
+  justify-content: space-between;
+  padding: 10px 25px;
 }
 
 .logo img {
-    height: 100%;
+  height: 100%;
 }
 
-.left-nav{
-    display: flex;
-    height: 100%;
-    align-items: center;
+.left-nav {
+  display: flex;
+  height: 100%;
+  align-items: center;
 }
 
-.left-nav nav ul{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
+.left-nav nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
 }
 
-.left-nav nav ul li{
-    text-transform: uppercase;
-    
-    font-weight: 700;
-    /* letter-spacing: 0.1rem; */
-   
-    padding-left: 3rem;
+.left-nav nav ul li {
+  text-transform: uppercase;
 
+  font-weight: 700;
+  padding: 10px 20px;
+  /* letter-spacing: 0.1rem; */
+
+  padding-left: 3rem;
 }
 
-.left-nav nav ul li:hover{
-    color:brown
+.left-nav nav ul li:hover {
+  color: brown;
+  cursor: pointer;
 }
 
-.right-nav{
-    display: flex;
-    align-items: center;
+.right-nav {
+  display: flex;
+  align-items: center;
 }
 
 .find-store i {
-    padding-right: 8px;
-    font-size: 24px;
-    cursor: pointer;
+  padding-right: 8px;
+  font-size: 24px;
+  cursor: pointer;
 }
-.find-store{
-
-    margin-right: 40px;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
-}
-
-.find-store:hover{
-    color: brown
+.find-store {
+  margin-right: 40px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
 }
 
-.sign-in, .join-now{
-    padding:7px 6px;
-    border: 1px solid;
-    border-radius: 50px;
-    font-weight: 600;
-    line-height: 1.2;
-}
-.sign-in{
-    margin-right: 16px;
+.find-store:hover {
+  color: brown;
+  cursor: pointer;
 }
 
-.sign-in:hover{
-    background-color: rgba(241, 235, 235, 0.6);
-    transition: all .2s ease;
+.sign-in,
+.join-now {
+  padding: 7px 6px;
+  border: 1px solid;
+  border-radius: 50px;
+  font-weight: 600;
+  line-height: 1.2;
+}
+.sign-in {
+  margin-right: 16px;
+  padding: 7px 20px;
 }
 
-.join-now{
-    background-color: black;
-    color: white;
-    
+.sign-in:hover {
+  background-color: #e3c89b;
+  transition: all 0.2s ease;
+  cursor: pointer;
+  color: white;
+}
+
+.join-now {
+  background-color: black;
+  color: white;
+  padding: 8px 20px;
+}
+
+.join-now:hover {
+  background-color: rgba(255, 255, 255, 0.7);
+  /* border-color: rgba(0, 0, 0, 0.7); */
+  color: #78684d;
+  cursor: pointer;
+}
+
 }
 
 
